1 March 2011: Wouter
	- after merge, remove double -I. from makefile.
	- radixtree is default.  Nicer makefile and no warnings from unused
	  flex functions.

1 March 2011: Wouter
	- merge with trunk r3181:
	24 February 2011: Matthijs
		- fix #bug350: refused notifies should log client ip.
	24 February 2011: Wouter
		- fix bug#362: outgoing-interface and v4 vs. v6 leads to spurious
		  warning messages.
		- fix bug#363: nsd-checkconf -v does not print outgoing-interface ok.
		- fix that nsd-checkconf -o outgoing-interface omits NOKEY.
	23 February 2011: Wouter
		- fix for bug#357, make xfrd quit with many zones.
		
23 February 2011: Wouter
	- Merge trunk r3151.
		22 February 2011: Matthijs
			- Patch Jakob Schlyter (setusercontext before chroot).
		18 February 2011: Wouter
			- overhaul of testset, with port uniqueness and fast start and stop.
		11 February 2011: Wouter
			- added test case to do with bug357.
		24 January 2011: Matthijs
			- Patch Tom Hendrikx (only errors to stderr when doing nsdc patch).

17 February 2011: Wouter
	- Fix leak of compressiontable when the domain table increases in size.
	- added test case to do with bug357.

10 February 2011: Wouter
	- Merged with trunk r3115 changes:
		20 January 2011: Wouter
			- Fix on shutdown, then getaddrinfo acquired data uses freeaddrinfo.
		19 January 2011: Wouter
			- Bug #348: no -I/usr and -L/usr for libcrypto in /usr.
		5 January 2011: Matthijs
			- Fix nsdc update and nsdc notify
			- Force outgoing interface to be a single range acl
			- Update documentation about acl options
			- Code review
			- Fix nsdc so it can use hmac-sha* tsigs
			- Bug #347: NSEC3 nodata QTYPE=DS not at delegation mismatch
		4 January 2011: Yuri
			- Doc spelling error, bug#345
		15 December 2010: Wouter
			- fix race condition when nsd is stopped while a reload is in
			  progress, often when rc.d does nsdc patch; nsdc stop in sequence.
			  reload is now signalled to stop too.
		10 December 2010: Matthijs