@@ -100,7 +100,12 @@ query_axfr(struct nsd *nsd, struct query *query)
 	/* Add zone RRs until answer is full.  */
 	assert(query->axfr_current_domain);
 
-	while ((rbnode_t *) query->axfr_current_domain != RBTREE_NULL) {
+#ifdef USE_RADIX_TREE
+	while (query->axfr_current_domain != NULL)
+#else
+	while ((rbnode_t *) query->axfr_current_domain != RBTREE_NULL)
+#endif
+	{
 		if (!query->axfr_current_rrset) {
 			query->axfr_current_rrset = domain_find_any_rrset(
 				query->axfr_current_domain,
@@ -128,7 +133,11 @@ query_axfr(struct nsd *nsd, struct query *query)
 		}
 		assert(query->axfr_current_domain);
 		query->axfr_current_domain
+#ifdef USE_RADIX_TREE
+			= domain_next(query->axfr_current_domain);
+#else
 			= (domain_type *) rbtree_next((rbnode_t *) query->axfr_current_domain);
+#endif
 	}
 
 	/* Add terminating SOA RR.  */
