@@ -1,3 +1,6 @@
+2 March 2011: Wouter
+	- Fix AXFR service with radix tree.
+
 1 March 2011: Wouter
 	- after merge, remove double -I. from makefile.
 	- radixtree is default.  Nicer makefile and no warnings from unused
